<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="app_logo">App logo</string>
    <string name="start">Start</string>
    <string name="get_ready_in">GET READY IN</string>
    <string name="exercise">Exercise</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
    <string name="sound">Sound</string>
    <string name="finish">Finish</string>
    <string name="end">End</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_finished_the_workout">You have finished the workout!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bmi">BMI</string>
    <string name="stretch">Stretch</string>
    <string name="workout">Workout</string>
    <string name="history">History</string>
    <string name="workout_a">Workout A</string>
    <string name="workout_b">Workout B</string>
    <string name="workout_plan_a">Workout plan A</string>
    <string name="workout_plan_b">Workout plan B</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="calculate">Calculate</string>
    <string name="your_bmi">YOUR BMI:</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="workouts_completed">WORKOUTS COMPLETED</string>
</resources>