<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|top"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:minWidth="320dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/yes"
            android:textSize="16sp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_weight="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>