<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/globalPadding"
    tools:context=".FinishActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/end"
        android:textColor="@color/red"
        android:textSize="50sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/end_image_circular_shape">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_check_24"
            android:contentDescription="@string/finish" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/congratulations"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_finished_the_workout"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:minHeight="60dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/finish"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:strokeColor="@color/red"
        app:strokeWidth="3dp" />
</androidx.appcompat.widget.LinearLayoutCompat>